[tool.poetry]
name = "cipher_xs2423"
version = "0.1.0"
description = "xs2423"
authors = ["xs2423"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
